# dev-web

./: RCBrowser-27-Tabs-Fixed.apk.idsig  RCBrowser-Final-Fixed.apk.idsig  RCBrowser-Latest.apk.idsig  RCBrowser-Signed.apk.idsig  RCBrowsersv1.2.1.apk.idsig  RCBrowsersv1.2.2.apk.idsig  RCBrowsersv1.2.3.apk.idsig  RCBrowsersv1.2.4.apk.idsig  RCBrowsersv1.2.5.apk.idsig  RCBrowsersv1.2.6.apk.idsig  RCBrowsersv1.2.7.apk.idsig  RCBrowserv1.1.8.apk.idsig  RCBrowserv1.1.9.apk.idsig  RCBrowserv1.2.1.apk.idsig  RCBrowserv1.2.2.apk.idsig  RCBrowserv1.2.8.apk.idsig  RCBrowserv1.2.9.apk.idsig  RCBrowserv1.3.0.apk.idsig  RCBrowserv1.3.1.apk.idsig  RCBrowserv1.3.2.apk.idsig  index.html  package-lock.json  package.json  rc-key.jks  update.json  vite.config.ts
dev-browser/: index.html  package-lock.json  package.json  tailwind.config.js
dev-browser/src/: App.tsx
dev-browser/src-tauri/capabilities/: default.json
dev-browser/src-tauri/src/: main.rs
dev-browser/src/components/: CommandPalette.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  Viewport.tsx
src/: App.tsx  firebase.ts  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: easylist.txt  lib.rs  main.rs
src/components/: Downloads.tsx  Home.tsx  Settings.tsx  SettingsContext.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  Viewport.tsx
